# DeepGen

./: .gitignore  .gitmodules  CMakeLists.txt  CheckUserConfig.cmake  Compile.sh  QuickStart.md  README.md  README_old.md  cleanHsaco.sh  cluster_task_config.json  config.h.in  precompiled.json  startup_config.json  testAttnCmd.sh  testAttnCmdTest.sh  testAttnOptCmd.sh  testAttnOriginFullTuning.sh  testAttnSplitCmd.sh  testAttnSplitFullTuning.sh  testGemma2FullTuning.sh  testGemma2OriginFullTuning.sh  testGemma2SplitCmd.sh  testH2OFullTuning.sh  testH2OOriginFullTuning.sh  testH2OSplitCmd.sh  testKernel.sh  testKernel_2.sh  testKernel_conv.sh  testO0.hsaco  testO1.hsaco  test_err_attn.py  test_err_gemma2.py  test_err_h2o.py  thirdPartyPath.json  tlog_GEMM_configs_2048_card7.json
ClusterTaskConfigs/: task_config.json  task_config_gemm.json  task_config_gemm_K128.json  task_config_gemm_square.json  task_config_local.json  task_config_sample2.json
Jiaofu/: testMM.sh
TuningCombs/: cfg_cominations_2.json  ts_1.json  ts_3.json  tuingspace_gemm_debug.json
TuningConfigs/: GEMM_cfg_32.json  GEMM_configs_1024.json  GEMM_configs_1024_LSU.json  GEMM_configs_1024_noLSU.json  GEMM_configs_128.json  GEMM_configs_2.json  GEMM_configs_2048.json  GEMM_configs_256.json  GEMM_configs_2_e2e.json  GEMM_configs_3.json  GEMM_configs_4096.json  GEMM_configs_512.json  GEMM_configs_64.json  attn_llama2.json  attn_llama2Single.json  attn_llama2_0227.json  attn_llama2_0227_debug.json  attn_split_tuning.json  e2e_improv.json  gemma2_split.json  gemma2_tuning.json  h2o_split.json  h2o_tuning.json  imp.json  mm-2048-2048-2048.json  mm-4096-8192-512.json  mm-8192-2048-1024.json  mm-b16-1024-4096-256.json  mm-b2-2048-2048-1024.json  mm-b4-1024-1024-2048.json  mm-b8-2048-1024-1024.json  test.json
_TempCodes/: 0909090909.mlir  CMakeLists.txt  LowerTorchToGPUKernel.sh  Lower_Test.sh  RunCUDA.sh  SSHFileSender.py  attn.mlir  attn_.mlir  attn_FP32_test.py  clearHsaco.sh  code.mlir  config.json  flash-attention.txt  flashAtten.cu  getAttentionOnnxModel.py  getHsaco.sh  get_nv_info.cu  kernel.hsaco  launch.cu  log1  log2  main.cpp  matmul.cpp  matmul.cu  mnist.onnx  pmc_log_reader.py  runDCU.sh  runRoc  runRocblas.cpp  runattn.cu  runattn_.cu  runkernel.cpp  runkernel.cu  self_attention.onnx  tempTest.py  tempstub.c  test.cpp  testpara.mlir  tryHip.cc
build_tools/: build_deepgen.sh  build_trt_attention_plugin.sh  install_requirements.sh
doc/: jiagousheji.md  重构方案.md
include/: KernelCodeGen.h
kcg/: Benchmark.sh  KCGTask.py  testt.py
result/: result-mm-2048-2048-2048_1000_11000.json  result-mm-2048-2048-2048_12000_11000.json  result-mm-2048-2048-2048_23000_11000.json  result-mm-2048-4096-1024_1000_11000.json  result-mm-2048-4096-1024_12000_11000.json  result-mm-2048-4096-1024_23000_11000.json  result-mm-4096-8192-512_1000_11000.json  result-mm-4096-8192-512_12000_11000.json  result-mm-4096-8192-512_23000_11000.json  result-mm-8192-2048-1024_1000_11000.json  result-mm-8192-2048-1024_12000_11000.json  result-mm-8192-2048-1024_23000_11000.json  result-mm-b16-1024-4096-256_0_1000.json  result-mm-b16-1024-4096-256_1000_11000.json  result-mm-b16-1024-4096-256_12000_11000.json  result-mm-b16-1024-4096-256_23000_11000.json  result-mm-b4-1024-1024-2048_0_1000.json  result-mm-b4-1024-1024-2048_1000_11000.json  result-mm-b4-1024-1024-2048_12000_11000.json  result-mm-b4-1024-1024-2048_23000_11000.json  result-mm-b8-2048-1024-1024_0_1000.json  result-mm-b8-2048-1024-1024_1000_11000.json  result-mm-b8-2048-1024-1024_12000_11000.json  result-mm-b8-2048-1024-1024_23000_11000.json  testResult-4096-8192-512-last5000.json  testResult-4096-8192-512.json  testResult-8192-2048-1024.0.json  testResult-8192-2048-1024.json  testResult-mm-b2-2048-2048-1024.json  testResult:2048:4096:1024_0-10000.json  testResult_2048:2048:2048_old.json  testResult_8192:2048:512.json
result_conv/: res_convMM-b8-128-1024-8192.json  result-mm_1._256_16384_4096_0-6000.json  result-mm_1._256_65536_4096_0-6000.json  result-mm_2._512_4096_8192_0-6000.json
result_model/: result-mm_1.12._1024_1024_64_0-3900.json  result-mm_1.12._1024_1024_64_3900-3900.json  result-mm_1.12._1024_1024_64_7800-3900.json  result-mm_1.12._1024_64_1024_0-3900.json  result-mm_1.12._1024_64_1024_3900-3900.json  result-mm_1.12._1024_64_1024_7800-3900.json  result-mm_1.16._1024_1024_64_0-3900.json  result-mm_1.16._1024_1024_64_3900-3900.json  result-mm_1.16._1024_64_1024_0-3900.json  result-mm_1.16._1024_64_1024_3900-3900.json  result-mm_1.32._2048_128_2048_0-3900.json  result-mm_1.32._2048_128_2048_3900-3900.json  result-mm_1.32._2048_2048_128_0-3900.json  result-mm_1.32._2048_2048_128_3900-3900.json  result-mm_1._1024_1024_1024_0-3900.json  result-mm_1._1024_1024_1024_3900-3900.json  result-mm_1._1024_1024_1024_7800-3900.json  result-mm_1._1024_1024_4096_0-3900.json  result-mm_1._1024_1024_4096_3900-3900.json  result-mm_1._1024_4096_1024_0-3900.json  result-mm_1._1024_4096_1024_3900-3900.json  result-mm_1._2048_4096_4096_0-3900.json  result-mm_1._2048_4096_4096_3900-3900.json
scripts/: Benchmark.sh  ClearRuntimeDir.sh  ClearTmpKernels.py  GetCudaInfo.py  NotFoundGLIBCXX_3.4.30.sh  StartBatchTestWithCluster.sh  StopBenchmark.sh  clearKernel.sh
src/: CMakeLists.txt  deepgen.cc  main.cc  main_.cc  pytest.cc  test.cc
src/lib/: CMakeLists.txt  KernelCodeGen.cc
src/lib/Analysis/: Analyzer.cc
src/lib/Common/: Utils.cc
src/lib/Conversion/: FuseMap.cc  Fusing.cc  LoweringPasses.cc  Mapping.cc  Optimizer.cc  PrintOpLowering.cc
src/lib/Conversion/General/: GeneralFuncs.cc  Rewriter.cc
src/lib/Conversion/Matmul/: Matmul.cc
src/lib/Conversion/Optimizes/: FalshAttn.cc  FlashAttnOrigin.cc  FlashAttnSplitK2.cc  GemmNormColSum.cc  GemmStats.cc  Matmul.cc
src/lib/ModelManager/: ModelManager.cc  main.cc
src/lib/Operators/: BroadcastNorm.cc  ElemScale.cc  Matmul.cc  Operators.cc  RowDiv.cc  Softmax.cc  SoftmaxExp.cc  SoftmaxStats.cc
src/model_manager/: CMakeLists.txt  ModelManager.cc  main.cc
tensorrt_plugins/: AttentionCorePlugin.cc  AttentionCorePlugin.h  CMakeLists.txt
(+333 files in other folders)
